# MultiRaptor

./: .gitignore  .mailmap  CMakeLists.txt  LICENSE  README.md  SECURITY.md  TODO.md  docs_legacy_notes.txt  examples.raptor  main.mp  mp.lock.json
.github/workflows/: coverage.yml  dependency-determinism.yml  deploy-web-playground.yml  fuzz.yml  perf-regression.yml  policy-checks.yml  quality-matrix.yml  sanitizers.yml  sync-web-wasm-artifacts.yml
Lib/: json.mp  prelude.mp  string.mp
Lib/core/: panic.mp  print.mp  time.mp
Lib/data/: list.mp  map.mp  set.mp
Lib/io/: file.mp  fs.mp  stream.mp
Lib/math/: basic.mp  random.mp  vector.mp
Lib/net/: http.mp  socket.mp
Tools/cpp-analyzer/: README
contracts/: language_contract.json
contrib/: README.md
design/: README.md
docs/: breaking_change_playbook.md  ci_quality_gates.md  dependency_determinism.md  error_guide.md  error_observability_contract.md  examples.md  game_api.md  grammar.md  index_legacy.md  language_contract.md  language_positioning.md  lib_audit.md  lts_support_policy.md  novel_language_experiments.md  production_hardening.md  repl.md  roadmap.md  runtime_correctness_contract.md  stdlib.md  syntax.md  versioning_policy.md
docs/internals/: bytecode_design.md  compiler_architecture.md  error_system.md
examples/: functions.mp  hello_world.mp  loops.mp
include/: MoPr.h  magphos.h  magphos_build_config.h.in  magphos_compiler.h  multiraptor.h
info/: rules.txt
lua/: README.md
perf/: baseline.json
platform/android/: file_system_android.cpp  platform_config.h  terminal_android.cpp
platform/chromeos/: file_system_chromeos.cpp  platform_config.h  terminal_chromeos.cpp
platform/linux/: file_system_linux.cpp  platform_config.h  terminal_linux.cpp
platform/macos/: file_system_macos.cpp  platform_config.h  terminal_macos.cpp
platform/vscode/: main.cpp
platform/windows/: file_system_windows.cpp  platform_config.h  terminal_windows.cpp
samples/: 01-hello-world.md  02-variables.md  03-conditions.md  04-loops.md  05-functions.md  06-return-values.md  07-user-input.md  08-while.md  09-nested-logic.md  README.md
src/: MagPhos_compiler.cpp  MoPr_compiler.cpp  compiler_compiler.cpp  main.cpp  multiraptor_compiler.cpp
src/ast/: nodes.cpp  nodes.h
src/compiler/ast/: nodes.cpp  nodes.h
src/compiler/lexer/: lexer.cpp  lexer.h
src/compiler/parser/: parser.cpp  parser.h
src/compiler/semantic/: analyzer.cpp  analyzer.h
src/cssxd/: README.md
src/htmlxd/: dom.cpp  dom.h
src/interpreter/: interpreter.cpp  interpreter.h
src/lexer/: lexer.cpp  lexer.h
src/parser/: parser.cpp  parser.h
src/platform/android/: platform_config.h
src/platform/chromeos/: platform_config.h
src/platform/vscode/: main.cpp
src/platform/windows/: platform_config.h
src/runtime/: engine.cpp  engine.h  enviroment.cpp  enviroment.h  environment.cpp  environment.h  errors.cpp  errors.h  module_system.cpp  module_system.h  stdlib.cpp  stdlib.h  value.cpp  value.h
src/runtime/engine/: engine.cpp  engine.h  environment.cpp  environment.h  errors.cpp  errors.h  module_system.cpp  module_system.h  value.cpp
src/runtime/interpreter/: interpreter.cpp
src/runtime/stdlib/: stdlib.cpp  stdlib.h
src/semantic/: analyzer.cpp  analyzer.h
src/tools/: magphos_cli.cpp  magphos_repl.cpp
src/utils/: error.cpp  error.h  file_utils  file_utils.cpp  file_utils.h  string_utils.cpp  string_utils.h
src/web/: htmlxd_preview.cpp  htmlxd_preview.h  source_preview.cpp  source_preview.h  wasm_api.cpp
tests/: cli_tests.cpp  error_tests.cpp  example_tests.cpp  lexer_tests.cpp  manual_legacy.md  parser_tests.cpp  runtime_tests.cpp
tests/fuzz/: fuzz_lexer.cpp  fuzz_parser.cpp
tools/generators/: ast_node_generator.cpp  token_list_generator.cpp
tools/scripts/: build_all.sh  build_web.sh  check_coverage.sh  check_language_contract.py  check_lockfile_determinism.py  check_perf_regression.sh  check_policy_gates.sh  format_code.sh  migration_audit.py  mp.sh  run_tests.sh
web/: magphos.wasm  magphos_artifacts.json  magphos_wasm.js  magphos_wasm.wasm  magphos_wasm.wasm.64  magphos_wasm_.js  magphos_wasm_singlefile.js  playground.css  playground.html  playground.js  training.html
web/training/: common.css  lesson.js  lesson1.html  lesson2.html  lesson3.html  lesson4.html  lesson5.html  lesson6.html
